# GameOfLifeV2

./: CMakeLists.txt  C_Openfile.cpp  C_Openfile.h  File.cpp  File.h  M_Cell.cpp  M_Cell.h  M_Cell_test.hpp  M_Grid.cpp  M_Grid.h  M_Grid_test.hpp  README.md  V_Console.cpp  V_Console.h  V_Display.cpp  V_Display.h  V_Graphic.cpp  V_Graphic.h  V_Graphics.cpp  V_Graphics.h  V_Interface.cpp  V_Interface.h  V_Save.cpp  V_Save.h  main.cpp  test.txt  test_view.cpp  test_view.h  usine.txt
